--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -143,7 +143,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http:
+      test: ["CMD-SHELL", "curl -f http://localhost:8761/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
