--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,17 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  workflow_dispatch:
 
 env:
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
-  GRADLE_OPTS: -Xmx2048m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true
+  GRADLE_OPTS: -Xmx2048m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true -Dorg.gradle.workers.max=4
+  REGISTRY: ghcr.io
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   detect-changes:
@@ -115,29 +121,19 @@ jobs:
           SERVICE_CHANGED="false"
           ROOT_CHANGED="${{ needs.detect-changes.outputs.root }}"
           
-          if [ "$SERVICE" == "api-gateway" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.api-gateway }}"
-          elif [ "$SERVICE" == "service-discovery" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.service-discovery }}"
-          elif [ "$SERVICE" == "config-server" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.config-server }}"
-          elif [ "$SERVICE" == "identity-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.identity-service }}"
-          elif [ "$SERVICE" == "patient-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.patient-service }}"
-          elif [ "$SERVICE" == "doctor-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.doctor-service }}"
-          elif [ "$SERVICE" == "appointment-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.appointment-service }}"
-          elif [ "$SERVICE" == "billing-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.billing-service }}"
-          elif [ "$SERVICE" == "room-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.room-service }}"
-          elif [ "$SERVICE" == "equipment-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.equipment-service }}"
-          elif [ "$SERVICE" == "notification-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.notification-service }}"
-          fi
+          case "$SERVICE" in
+            api-gateway) SERVICE_CHANGED="${{ needs.detect-changes.outputs.api-gateway }}" ;;
+            service-discovery) SERVICE_CHANGED="${{ needs.detect-changes.outputs.service-discovery }}" ;;
+            config-server) SERVICE_CHANGED="${{ needs.detect-changes.outputs.config-server }}" ;;
+            identity-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.identity-service }}" ;;
+            patient-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.patient-service }}" ;;
+            doctor-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.doctor-service }}" ;;
+            appointment-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.appointment-service }}" ;;
+            billing-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.billing-service }}" ;;
+            room-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.room-service }}" ;;
+            equipment-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.equipment-service }}" ;;
+            notification-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.notification-service }}" ;;
+          esac
           
           if [[ "$SERVICE_CHANGED" == "true" ]] || [[ "$ROOT_CHANGED" == "true" ]]; then
             echo "should_build=true" >> $GITHUB_OUTPUT
@@ -150,6 +146,8 @@ jobs:
       - name: Checkout code
         if: steps.should-build.outputs.should_build == 'true'
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Set up JDK 21
         if: steps.should-build.outputs.should_build == 'true'
@@ -158,6 +156,10 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'gradle'
+          cache-dependency-path: |
+            build.gradle
+            ${{ matrix.service }}/build.gradle
+            gradle/wrapper/gradle-wrapper.properties
 
       - name: Cache Gradle dependencies
         if: steps.should-build.outputs.should_build == 'true'
@@ -166,9 +168,23 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
+            ~/.gradle/daemon
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+          enableCrossOsArchive: true
+
+      - name: Cache Gradle build outputs
+        if: steps.should-build.outputs.should_build == 'true'
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ matrix.service }}/build
+            .gradle
+          key: ${{ runner.os }}-gradle-build-${{ matrix.service }}-${{ hashFiles(format('{0}/build.gradle', matrix.service), 'build.gradle', 'settings.gradle') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-build-${{ matrix.service }}-
+          enableCrossOsArchive: true
 
       - name: Grant execute permission for gradlew
         if: steps.should-build.outputs.should_build == 'true'
@@ -176,7 +192,13 @@ jobs:
 
       - name: Build and run tests with Gradle
         if: steps.should-build.outputs.should_build == 'true'
-        run: ./gradlew :${{ matrix.service }}:build --no-daemon --build-cache --parallel
+        run: |
+          ./gradlew :${{ matrix.service }}:build \
+            --no-daemon \
+            --build-cache \
+            --parallel \
+            --max-workers=4 \
+            --console=plain
 
       - name: Upload test results
         if: always() && steps.should-build.outputs.should_build == 'true'
@@ -186,6 +208,7 @@ jobs:
           path: ${{ matrix.service }}/build/test-results/**/*.xml
           retention-days: 7
           if-no-files-found: ignore
+          compression-level: 6
 
       - name: Publish test results
         if: always() && steps.should-build.outputs.should_build == 'true'
@@ -195,15 +218,17 @@ jobs:
           check_name: Test Results (${{ matrix.service }})
           comment_mode: off
           report_individual_runs: false
+          check_run_annotations: all
 
-      - name: Cache build artifacts
+      - name: Upload build artifacts
         if: steps.should-build.outputs.should_build == 'true'
-        uses: actions/cache@v4
+        uses: actions/upload-artifact@v4
         with:
+          name: jar-${{ matrix.service }}
           path: ${{ matrix.service }}/build/libs/*.jar
-          key: ${{ runner.os }}-${{ matrix.service }}-jar-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.service }}-jar-
+          retention-days: 1
+          if-no-files-found: ignore
+          compression-level: 6
 
   build-docker:
     needs: [detect-changes, build-services]
@@ -232,29 +257,19 @@ jobs:
           SERVICE="${{ matrix.service }}"
           ROOT_CHANGED="${{ needs.detect-changes.outputs.root }}"
           
-          if [ "$SERVICE" == "api-gateway" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.api-gateway }}"
-          elif [ "$SERVICE" == "service-discovery" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.service-discovery }}"
-          elif [ "$SERVICE" == "config-server" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.config-server }}"
-          elif [ "$SERVICE" == "identity-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.identity-service }}"
-          elif [ "$SERVICE" == "patient-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.patient-service }}"
-          elif [ "$SERVICE" == "doctor-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.doctor-service }}"
-          elif [ "$SERVICE" == "appointment-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.appointment-service }}"
-          elif [ "$SERVICE" == "billing-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.billing-service }}"
-          elif [ "$SERVICE" == "room-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.room-service }}"
-          elif [ "$SERVICE" == "equipment-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.equipment-service }}"
-          elif [ "$SERVICE" == "notification-service" ]; then
-            SERVICE_CHANGED="${{ needs.detect-changes.outputs.notification-service }}"
-          fi
+          case "$SERVICE" in
+            api-gateway) SERVICE_CHANGED="${{ needs.detect-changes.outputs.api-gateway }}" ;;
+            service-discovery) SERVICE_CHANGED="${{ needs.detect-changes.outputs.service-discovery }}" ;;
+            config-server) SERVICE_CHANGED="${{ needs.detect-changes.outputs.config-server }}" ;;
+            identity-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.identity-service }}" ;;
+            patient-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.patient-service }}" ;;
+            doctor-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.doctor-service }}" ;;
+            appointment-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.appointment-service }}" ;;
+            billing-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.billing-service }}" ;;
+            room-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.room-service }}" ;;
+            equipment-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.equipment-service }}" ;;
+            notification-service) SERVICE_CHANGED="${{ needs.detect-changes.outputs.notification-service }}" ;;
+          esac
           
           if [[ "$SERVICE_CHANGED" == "true" ]] || [[ "$ROOT_CHANGED" == "true" ]]; then
             echo "should_build=true" >> $GITHUB_OUTPUT
@@ -267,30 +282,37 @@ jobs:
       - name: Checkout code
         if: steps.should-build.outputs.should_build == 'true'
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Set up Docker Buildx
         if: steps.should-build.outputs.should_build == 'true'
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
 
-      - name: Log in to Docker registry
+      - name: Log in to Container Registry
         if: steps.should-build.outputs.should_build == 'true' && github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: ${{ secrets.DOCKER_REGISTRY != '' && secrets.DOCKER_REGISTRY || 'docker.io' }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         if: steps.should-build.outputs.should_build == 'true'
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_REGISTRY != '' && format('{0}/{1}/{2}', secrets.DOCKER_REGISTRY, secrets.DOCKER_USERNAME, matrix.service) || format('{0}/{1}', secrets.DOCKER_USERNAME, matrix.service) }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ matrix.service }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ github.run_number }}
 
       - name: Build and push Docker image
         if: steps.should-build.outputs.should_build == 'true'
@@ -301,11 +323,15 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ matrix.service }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.service }}
+          cache-from: |
+            type=gha,scope=${{ matrix.service }}
+            type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ matrix.service }}:latest
+          cache-to: |
+            type=gha,mode=max,scope=${{ matrix.service }}
           platforms: linux/amd64
           build-args: |
             BUILDKIT_INLINE_CACHE=1
+          outputs: type=image,push=${{ github.event_name != 'pull_request' }},compression=zstd,compression-level=6
 
   build-frontend:
     needs: detect-changes
@@ -315,6 +341,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -323,13 +351,36 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            frontend/node_modules
+            frontend/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+          enableCrossOsArchive: true
+
+      - name: Cache Vite build
+        uses: actions/cache@v4
+        with:
+          path: |
+            frontend/dist
+            frontend/.vite
+          key: ${{ runner.os }}-vite-${{ hashFiles('frontend/package-lock.json', 'frontend/vite.config.ts', 'frontend/tsconfig.json') }}
+          restore-keys: |
+            ${{ runner.os }}-vite-
+          enableCrossOsArchive: true
+
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci --prefer-offline --no-audit --frozen-lockfile
 
       - name: Run linter
         working-directory: ./frontend
         run: npm run lint || true
+        continue-on-error: true
 
       - name: Build frontend
         working-directory: ./frontend
@@ -337,25 +388,30 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
 
-      - name: Log in to Docker registry
+      - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: ${{ secrets.DOCKER_REGISTRY != '' && secrets.DOCKER_REGISTRY || 'docker.io' }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_REGISTRY != '' && format('{0}/{1}/frontend', secrets.DOCKER_REGISTRY, secrets.DOCKER_USERNAME) || format('{0}/frontend', secrets.DOCKER_USERNAME) }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/frontend
           tags: |
             type=ref,event=branch
             type=ref,event=pr
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ github.run_number }}
 
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
@@ -365,14 +421,18 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=frontend
-          cache-to: type=gha,mode=max,scope=frontend
+          cache-from: |
+            type=gha,scope=frontend
+            type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/frontend:latest
+          cache-to: |
+            type=gha,mode=max,scope=frontend
           platforms: linux/amd64
+          outputs: type=image,push=${{ github.event_name != 'pull_request' }},compression=zstd,compression-level=6
 
   integration-tests:
     needs: [build-docker, build-frontend]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     
     steps:
       - name: Checkout code
@@ -386,11 +446,40 @@ jobs:
           docker-compose up -d
           sleep 30  # Wait for services to be ready
 
+      - name: Wait for services to be healthy
+        run: |
+          timeout=300
+          elapsed=0
+          while [ $elapsed -lt $timeout ]; do
+            if curl -f http://localhost:8761 > /dev/null 2>&1; then
+              echo "✅ Service Discovery is ready"
+              break
+            fi
+            echo "⏳ Waiting for services... ($elapsed/$timeout seconds)"
+            sleep 5
+            elapsed=$((elapsed + 5))
+          done
+
       - name: Run integration tests
         run: |
           echo "Integration tests would run here"
+          # Add your integration test commands here
 
       - name: Stop services
         if: always()
-        run: docker-compose down
+        run: docker-compose down -v
 
+  build-summary:
+    needs: [build-services, build-docker, build-frontend]
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Summary
+        run: |
+          echo "## 🚀 Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Services Built" >> $GITHUB_STEP_SUMMARY
+          echo "- All microservices built successfully" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Docker Images" >> $GITHUB_STEP_SUMMARY
+          echo "- Images pushed to ${{ env.REGISTRY }}" >> $GITHUB_STEP_SUMMARY
