Fix Docker JAR build issue and improve start.sh script
- Fix JAR file copy in all Dockerfiles (separate build and copy steps)
- Add error handling for missing JAR files with directory listing
- Improve start.sh: use local builds, better output pacing, error handling
- Reduce terminal output frequency (status every 5 attempts)
- Add helpful error messages and logs on failure
- Use docker-compose.yml for local development by default

--- a/billing-service/Dockerfile
+++ b/billing-service/Dockerfile
@@ -19,8 +19,9 @@ COPY billing-service/src billing-service/src
 ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true"
 RUN --mount=type=cache,target=/root/.gradle/caches \
     --mount=type=cache,target=/root/.gradle/wrapper \
-    ./gradlew :billing-service:build -x test --no-daemon --build-cache --parallel && \
-    find billing-service/build/libs -name "*.jar" -not -name "*-plain.jar" -exec cp {} app.jar \;
+    ./gradlew :billing-service:build -x test --no-daemon --build-cache --parallel
+RUN find billing-service/build/libs -name "*.jar" -not -name "*-plain.jar" | head -1 | xargs -I {} cp {} app.jar || \
+    (echo "Error: JAR file not found in billing-service/build/libs" && ls -la billing-service/build/libs/ && exit 1)
 
 FROM gcr.io/distroless/java21-debian12:nonroot
 WORKDIR /app
