--- a/service-discovery/Dockerfile
+++ b/service-discovery/Dockerfile
@@ -19,8 +19,9 @@ COPY service-discovery/src service-discovery/src
 ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true"
 RUN --mount=type=cache,target=/root/.gradle/caches \
     --mount=type=cache,target=/root/.gradle/wrapper \
-    ./gradlew :service-discovery:build -x test --no-daemon --build-cache --parallel && \
-    find service-discovery/build/libs -name "*.jar" -not -name "*-plain.jar" -exec cp {} app.jar \;
+    ./gradlew :service-discovery:build -x test --no-daemon --build-cache --parallel
+RUN find service-discovery/build/libs -name "*.jar" -not -name "*-plain.jar" | head -1 | xargs -I {} cp {} app.jar || \
+    (echo "Error: JAR file not found in service-discovery/build/libs" && ls -la service-discovery/build/libs/ && exit 1)
 
 FROM gcr.io/distroless/java21-debian12:nonroot
 WORKDIR /app
